--- a/Areas/Admin/Views/Orders/Detail.cshtml
+++ b/Areas/Admin/Views/Orders/Detail.cshtml
@@ -9,120 +9,114 @@
 }
 
 <div class="content">
-    <!-- Quick Overview -->
-    <div class="row items-push">
-        <div class="col-6 col-lg-3">
-            <a class="block block-rounded block-link-shadow text-center h-100 mb-0" href="javascript:void(0)">
-                <div class="block-content py-5">
-                    <div class="item rounded-circle bg-xeco-lighter mx-auto mb-3">
-                        <i class="fa fa-check text-xeco-dark"></i>
-                    </div>
-                    <p class="fw-semibold fs-sm text-muted text-uppercase mb-0">
-                        ORD.@order.Id
-                    </p>
-                </div>
-            </a>
-        </div>
-        <div class="col-6 col-lg-3">
-            <a class="block block-rounded block-link-shadow text-center h-100 mb-0" href="javascript:void(0)">
-                <div class="block-content py-5">
-                    <div class="item rounded-circle bg-xeco-lighter mx-auto mb-3">
-                        <i class="fa fa-check text-xeco-dark"></i>
-                    </div>
-                    <p class="fw-semibold fs-sm text-muted text-uppercase mb-0">
-                        Payment
-                    </p>
-                </div>
-            </a>
-        </div>
-        <div class="col-6 col-lg-3">
-            <a class="block block-rounded block-link-shadow text-center h-100 mb-0" href="javascript:void(0)">
-                <div class="block-content py-5">
-                    <div class="item rounded-circle bg-xsmooth-lighter mx-auto mb-3">
-                        <i class="fa fa-sync fa-spin text-xsmooth-dark"></i>
-                    </div>
-                    <p class="fw-semibold fs-sm text-muted text-uppercase mb-0">
-                        Packaging
-                    </p>
-                </div>
-            </a>
-        </div>
-        <div class="col-6 col-lg-3">
-            <a class="block block-rounded block-link-shadow text-center h-100 mb-0" href="javascript:void(0)">
-                <div class="block-content py-5">
-                    <div class="item rounded-circle bg-body mx-auto mb-3">
-                        <i class="fa fa-times text-muted"></i>
-                    </div>
-                    <p class="fw-semibold fs-sm text-muted text-uppercase mb-0">
-                        Delivery
-                    </p>
-                </div>
-            </a>
-        </div>
-    </div>
-    <!-- END Quick Overview -->
-    <!-- Products -->
-    <div class="block block-rounded">
-        <div class="block-header block-header-default">
-            <h3 class="block-title">Products</h3>
-        </div>
-        <div class="block-content">
-            <div class="table-responsive">
-                <table class="table table-borderless table-striped table-vcenter fs-sm">
-                    <thead>
-                        <tr>
-                            <th class="text-center" style="width: 100px;">ID</th>
-                            <th>Product Name</th>
-                            <th class="text-center">Size</th>
-                            <th>Color</th>
-                            <th class="text-center">Stock</th>
-                            <th class="text-center">Qty</th>
-                            <th class="text-end" style="width: 10%;">Unit Cost</th>
-                            <th class="text-end" style="width: 10%;">Price</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach(var item in detail)
-                        {
-                            <tr>
-                                <td class="text-center"><a href="~/product/detail/@item.ProductId"><strong>@item.ProductId</strong></a></td>
-                                <td><a href="~/product/detail/@item.ProductId"><strong>@item.Name</strong></a></td>
-                                <td class="text-center">@item.Size</td>
-                                <td>@item.Color</td>
-                                <td class="text-center">@item.Stock</td>
-                                <td class="text-center"><strong>@item.Quantity</strong></td>
-                                <td class="text-end">$@item.Price</td>
-                                <td class="text-end">$@(item.Price * item.Quantity)</td>
-                            </tr>
-                        }
-                        <tr>
-                            <td colspan="7" class="text-end"><strong>Total Price:</strong></td>
-                            <td class="text-end">$@order.SubTotal</td>
-                        </tr>
-                        <tr>
-                            <td colspan="7" class="text-end"><strong>Shipping Fee:</strong></td>
-                            <td class="text-end">$@order.ShippingFee</td>
-                        </tr>
-                        <tr class="table-active">
-                            <td colspan="7" class="text-end text-uppercase"><strong>Total Due:</strong></td>
-                            <td class="text-end"><strong>$@(order.ShippingFee + order.SubTotal)</strong></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    <!-- END Products -->
-    <!-- Customer -->
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-9">
+            <!-- Products -->
+            <div class="block block-rounded">
+                <div class="block-header block-header-default">
+                    <h3 class="block-title">Order information #@order.Id</h3>
+                    <div class="block-options">
+                        <p class="mb-0 badge bg-primary">Status</p>
+                    </div>
+                </div>
+                <div class="block-content">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-vcenter fs-sm">
+                            <thead>
+                                <tr>
+                                    <th class="text-center" style="width: 100px;">ID</th>
+                                    <th>Product Name</th>
+                                    <th class="text-center">Size</th>
+                                    <th>Color</th>
+                                    <th class="text-center">Qty</th>
+                                    <th class="text-end" style="width: 10%;">Unit Cost</th>
+                                    <th class="text-end" style="width: 10%;">Price</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in detail)
+                                {
+                                    <tr>
+                                        <td class="text-center"><a href="~/product/detail/@item.ProductId"><strong>@item.ProductId</strong></a></td>
+                                        <td><a href="~/product/detail/@item.ProductId"><strong>@item.Name</strong></a></td>
+                                        <td class="text-center">@item.Size</td>
+                                        <td>@item.Color</td>
+                                        <td class="text-center"><strong>@item.Quantity</strong></td>
+                                        <td class="text-end">$@item.Price</td>
+                                        <td class="text-end">$@(item.Price * item.Quantity)</td>
+                                    </tr>
+                                }
+                                <tr>
+                                    <td colspan="6" class="text-end"><strong>Total Price:</strong></td>
+                                    <td class="text-end">$@order.SubTotal</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="6" class="text-end"><strong>Shipping Fee:</strong></td>
+                                    <td class="text-end">$@order.ShippingFee</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="6" class="text-end text-uppercase"><strong>Total Due:</strong></td>
+                                    <td class="text-end"><strong>$@(order.ShippingFee + order.SubTotal)</strong></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="border-bottom py-3 d-flex justify-content-between" id="order-confirm-container">
+                        @if(order.OrderStatus == 1) {
+                            <div class="d-flex align-items-center gap-2">
+                                <i class="fa fa-check text-success fs-4"></i>
+                                <p class="mb-0 fs-6">ORDER WAS CONFIRMED</p>
+                            </div>
+                        } else {
+                            <div class="d-flex align-items-center gap-2">
+                                <i class="fa fa-times text-danger fs-4"></i>
+                                <p class="mb-0 fs-6">ORDER NOT CONFIRMED</p>
+                            </div>
+                            <button class="btn btn-hero btn-info" id="btn-confirm">Confirm</button>
+                        }
+                    </div>
+                    <div class="border-bottom py-3">
+                        <div class="d-flex align-items-center gap-2 mb-2">
+                            @if(@order.PaymentStatus)
+                            {
+                                <i class="fa fa-check text-success fs-4"></i>
+                            } else
+                            {
+                                <i class="fa fa-times text-danger fs-4"></i>
+                            }
+                            <p class="mb-0 fs-6">PAYMENT</p>
+                        </div>
+                        <div>
+                            <p class="fs-sm mb-0">Payment method: @order.PaymentMethod</p>
+                        </div>
+                    </div>
+                    <div class="py-3">
+                        <div class="d-flex align-items-center gap-2 mb-2">
+                            <i class="fa fa-check text-success fs-4"></i>
+                            <p class="mb-0 fs-6">DELIVERY</p>
+                        </div>
+                        <div>
+                            <p class="fs-sm mb-0">Shipping method: @order.ShippingMethod</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END Products -->
+        </div>
+        <div class="col-3">
             <!-- Billing Address -->
             <div class="block block-rounded">
                 <div class="block-header block-header-default">
                     <h3 class="block-title">Customer Info</h3>
                 </div>
                 <div class="block-content">
-                    <div class="fs-4 mb-1">@customer.FullName</div>
+                    <div class="d-flex align-items-center gap-2">
+                        <img class="rounded-circle" style="width: 45px; height: 45px" src="@customer.ProfileImageUrl" alt="" />
+                        <div>
+                            <div class="fs-6">@customer.FullName</div>
+                            <p class="fs-sm mb-0"><i class="fa fa-venus-mars"></i> @(customer.Gender == 0 ? "Male" : "Female") </p>
+                        </div>
+                    </div>
                     <address class="fs-sm">
                         <br>
                         <i class="fa fa-phone"></i> @customer.PhoneNumber<br>
@@ -131,8 +125,6 @@
                 </div>
             </div>
             <!-- END Billing Address -->
-        </div>
-        <div class="col-sm-6">
             <!-- Shipping Address -->
             <div class="block block-rounded">
                 <div class="block-header block-header-default">
@@ -151,91 +143,26 @@
         </div>
     </div>
     <!-- END Customer -->
-    <!-- Log Messages -->
-    <div class="block block-rounded">
-        <div class="block-header block-header-default">
-            <h3 class="block-title">Log Messages</h3>
-        </div>
-        <div class="block-content">
-            <div class="table-responsive">
-                <table class="table table-borderless table-striped table-vcenter fs-sm">
-                    <tbody>
-                        <tr>
-                            <td class="fs-base" style="width: 80px;">
-                                <span class="badge bg-primary">Order</span>
-                            </td>
-                            <td style="width: 220px;">
-                                <span class="fw-semibold">January 17, 2020 - 18:00</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">Support</a>
-                            </td>
-                            <td class="text-success"><strong>Order Completed</strong></td>
-                        </tr>
-                        <tr>
-                            <td class="fs-base">
-                                <span class="badge bg-primary">Order</span>
-                            </td>
-                            <td>
-                                <span class="fw-semibold">January 17, 2020 - 17:36</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">Support</a>
-                            </td>
-                            <td class="text-warning"><strong>Preparing Order</strong></td>
-                        </tr>
-                        <tr>
-                            <td class="fs-base">
-                                <span class="badge bg-success">Payment</span>
-                            </td>
-                            <td>
-                                <span class="fw-semibold">January 16, 2020 - 18:10</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">John Parker</a>
-                            </td>
-                            <td class="text-success"><strong>Payment Completed</strong></td>
-                        </tr>
-                        <tr>
-                            <td class="fs-base">
-                                <span class="badge bg-danger">Email</span>
-                            </td>
-                            <td>
-                                <span class="fw-semibold">January 16, 2020 - 10:35</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">Support</a>
-                            </td>
-                            <td class="text-danger"><strong>Missing payment details. Email was sent and awaiting for payment before processing</strong></td>
-                        </tr>
-                        <tr>
-                            <td class="fs-base">
-                                <span class="badge bg-primary">Order</span>
-                            </td>
-                            <td>
-                                <span class="fw-semibold">January 15, 2020 - 14:59</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">Support</a>
-                            </td>
-                            <td>All products are available</td>
-                        </tr>
-                        <tr>
-                            <td class="fs-base">
-                                <span class="badge bg-primary">Order</span>
-                            </td>
-                            <td>
-                                <span class="fw-semibold">January 15, 2020 - 14:29</span>
-                            </td>
-                            <td>
-                                <a href="javascript:void(0)">John Parker</a>
-                            </td>
-                            <td>Order Submitted</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    <!-- END Log Messages -->
 </div>
+
+@section Scripts {
+    <script src="~/admin/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
+    <script>Dashmix.helpersOnLoad(['jq-notify']);</script>
+    <script>
+        $(document).ready(function () {
+            $('#btn-confirm').click(function (e) {
+                $.post(`/admin/orders/confirm/${@order.Id}`, {}, function (data, status) {
+                    if (data.status == "Confirmed") {
+                        Dashmix.helpers('jq-notify', { type: 'success', icon: 'fa fa-check me-1', message: 'Order confirmation successful!' });
+                        $("#order-confirm-container").html(`<div class="d-flex align-items-center gap-2">
+                            <i class="fa fa-check text-success fs-4"></i>
+                            <p class="mb-0 fs-6">ORDER WAS CONFIRMED</p>
+                        </div>`);
+                    } else {
+                        Dashmix.helpers('jq-notify', { type: 'danger', icon: 'fa fa-times me-1', message: 'Order confirmation failed!' });
+                    }
+                })
+            });
+        });
+    </script>
+}
