--- a/Views/Payment/PaymentSuccess.cshtml
+++ b/Views/Payment/PaymentSuccess.cshtml
@@ -66,7 +66,7 @@
                         </tr>
                         <tr>
                             <td>Payment method:</td>
-                            <td class="fw-bold text-primary">@(order.PaymentMethod == 0 ? "Cash on delivery" : "Payment with Paypal")</td>
+                            <td class="fw-bold text-primary">@(order.PaymentMethod)</td>
                         </tr>
                         <tr>
                             <td>Shipping method:</td>
