--- a/Views/Shared/_CheckoutLayout.cshtml
+++ b/Views/Shared/_CheckoutLayout.cshtml
@@ -31,6 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     @await RenderSectionAsync("Styles", required: false)
     <link rel="stylesheet" id="css-main" href="~/admin/css/dashmix.css">
+    <link rel="stylesheet" id="css-main" href="~/admin/css/custom.css">
 </head>
 <body>
     <div id="page-container">
