--- a/wwwroot/admin/css/custom.css
+++ b/wwwroot/admin/css/custom.css
@@ -1,21 +1,19 @@
-﻿.field-validation-error {
+﻿.field-validation-error, .form-control.error + label {
     width: 100%;
     margin-top: .375rem;
     font-size: .875rem;
-    color: #e04f1a!important;
+    color: #e04f1a !important;
 }
 
-
-.input-validation-error {
-    border-color: #fae5dd!important;
-    background-color: #fae5dd!important;
+.input-validation-error, .form-control.error {
+    border-color: #fae5dd !important;
+    background-color: #fae5dd !important;
 }
 
-.input-validation-error:focus {
+.input-validation-error:focus, .form-control.error:focus {
     border-color: #e04f1a;
     box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
 }
-
 
 .upload-image-container {
     min-height: 150px;
