--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -2,6 +2,7 @@
 	var product = ViewBag.Product;
 	ViewData["Title"] = product.Name;
 	var checkReview = ViewBag.CheckReview;
+	var reviewStats = ViewBag.ReviewStats;
 }
 @section Styles {
 	<link href="~/css/product_page.css" rel="stylesheet">
@@ -172,11 +173,11 @@
 										<div class="p-4 border border-2" style="border-radius: 8px">
 											<div class="row justify-content-center align-items-center">
 												<div class="d-flex justify-content-center align-items-center">
-													<div style="font-size: 34px;">
-														<strong style="color: #faca50;">3.4</strong>/<span>5</span>
+													<div style="font-size: 30px;">
+														<strong style="color: #faca50;">@ViewBag.AverageRating</strong>/<span>5</span>
 													</div>
 												</div>
-												<h5 class="text-center">Có 6 lượt đánh giá</h5>
+												<h6 class="text-center">Có @ViewBag.CountView lượt đánh giá</h6>
 											</div>
 											<div class="d-flex justify-content-between align-items-center">
 												<span class="rating" style="margin-right: 20px">
@@ -187,8 +188,8 @@
 													<i class="icon-star"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-3">
-													<div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-														25%
+													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentOneStar)" aria-valuenow="@reviewStats.OneStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
+														@reviewStats.PercentOneStar
 													</div>
 												</div>
 											</div>
@@ -201,8 +202,8 @@
 													<i class="icon-star"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-3">
-													<div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100">
-														30%
+													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentTwoStar)" aria-valuenow="@reviewStats.TwoStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
+														@reviewStats.PercentTwoStar
 													</div>
 												</div>
 											</div>
@@ -215,8 +216,8 @@
 													<i class="icon-star"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-3">
-													<div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100">
-														30%
+													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentThreeStar)" aria-valuenow="@reviewStats.ThreeStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
+														@reviewStats.PercentThreeStar
 													</div>
 												</div>
 											</div>
@@ -229,8 +230,8 @@
 													<i class="icon-star"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-3">
-													<div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100">
-														30%
+													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentFourStar)" aria-valuenow="@reviewStats.FourStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
+														@reviewStats.PercentFourStar
 													</div>
 												</div>
 											</div>
@@ -243,8 +244,8 @@
 													<i class="icon-star" style="color: #fec348;"></i>
 												</span>
 												<div class="progress flex-grow-1 mb-3">
-													<div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-														0%
+													<div class="progress-bar" role="progressbar" style="width: calc(@reviewStats.PercentFiveStar)" aria-valuenow="@reviewStats.FiveStar" aria-valuemin="0" aria-valuemax="@ViewBag.TotalRating">
+														@reviewStats.PercentFiveStar
 													</div>
 												</div>
 											</div>
@@ -267,11 +268,11 @@
 												</div>
 												<div class="d-flex col-md-6 justify-content-between">
 													<div class="text-white ml-4">
-														<i class="fa-solid fa-sort text-white"></i>
+														<i class="fa-solid fa-sort text-white" style="margin-right: 5px"></i>
 														Sắp xếp: Mới nhất
 													</div>
 													<div class="text-white">
-														<i class="fa-solid fa-filter text-white"></i>
+														<i class="fa-solid fa-filter text-white mr-3" style="margin-right: 5px"></i>
 														Lọc: Tất cả
 													</div>
 												</div>
@@ -322,6 +323,7 @@
 	        </div>
 	        <!-- /container -->
 	    </div>
+		</div>
 	    <!-- /tab_content_wrapper -->
 
 	    <div class="container margin_60_35">
@@ -426,9 +428,9 @@
 
 @if (checkReview != 0)
 {
-	<div style="margin-top: 50px" class="modal fade" id="modal-add-review" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalAddReview" aria-hidden="true">
+	<div style="margin-top: 70px" class="modal fade" id="modal-add-review" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalAddReview" aria-hidden="true">
 		<div class="modal-dialog">
-			<div class="modal-content" style="border-radius: 8px!important;">
+			<div class="modal-content" style="border-radius: 8px!important; padding: 0px!important;">
 				<form id="form-review">
 					<div class="modal-header">
 						<h1 class="modal-title fs-5" id="modalAddReview">Add Review</h1>
