--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -195,21 +195,7 @@
 		</header>
 		<!-- /header -->
 
-		<div class="top_panel">
-			<div class="container header_panel">
-				<a href="#0" class="btn_close_top_panel"><i class="ti-close"></i></a>
-				<small>What are you looking for?</small>
-			</div>
-			<!-- /header_panel -->
-
-			<div class="container">
-				<div class="search-input">
-					<input type="text" placeholder="Search over 10.000 products...">
-					<button><i class="ti-search"></i></button>
-				</div>
-			</div>
-			<!-- /related -->
-		</div>
+		
 		<!-- /search_panel -->
 
 		@RenderBody()
@@ -356,7 +342,26 @@
 	<!-- COMMON SCRIPTS -->
 	<script src="~/js/common_scripts.min.js"></script>
 	<script src="~/js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+	<script>
+		$(document).ready(function () {
+			$("#form-search").validate({
+				rules: {
+					"inputSearch": {
+						required: true
+					}
+				},
+				messages: {
+					"input-search": {
+						required: "Please enter your search"
+					}
+				},
+				submitHandler: function (form) {
+					
+				}
+			});
+		});
+	</script>
 	<!-- SPECIFIC SCRIPTS -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
